--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,8 +19,10 @@
 	--gradient3: #77daf3;
 	--border: rgb(70, 77, 83);
 	--icon-default: #a0a0a0;
-	--background: #0b0b0b;
-	--text-dark: rgb(246, 246, 246);
+	--bg-darkmode: #0b0b0b;
+	--bg-lightmode: #fafafa;
+	--text-darkmode: rgb(246, 246, 246);
+	--text-lightmode: rgb(24, 24, 24);
 
 	--github: #fafafa;
 	--instagram: #c13584;
@@ -54,25 +56,12 @@
 }
 
 body {
-	--text-color: #222;
-	--bg-color: #fff;
-	background-color: var(--bg-color);
-	color: var(--text-dark);
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	font-size: 16px;
 }
 
-body.dark-theme {
-	--text-color: #eee;
-	--bg-color: #0b0b0b;
-}
-
 h1,
 p {
 	color: var(--text-color);
-}
-
-@media (prefers-color-scheme: dark) {
-	/* defaults to dark theme */
 }
