--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,6 +60,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	font-size: 16px;
+	overflow-x: hidden;
 }
 
 h1,
@@ -71,11 +72,5 @@ a {
 	color: white;
 	text-decoration: none;
 	transition: all 0.2s ease-out;
-}
-
-a:visited {
-}
-
-a:hover {
-	opacity: 0.7;
+	cursor: none;
 }
