Add Divider and Project component

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,9 +14,9 @@
 	--secondary: "Woodland";
 
 	/* colors */
-	--gradient1: #faffd0;
-	--gradient2: #ff86f5;
-	--gradient3: #adefff;
+	--gradient1: #ffc456;
+	--gradient2: #ff4ff0;
+	--gradient3: #70e2ff;
 	--border: rgb(70, 77, 83);
 	--icon-default: #a0a0a0;
 	--bg-darkmode: #0b0b0b;
