--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,6 +56,7 @@ body {
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	font-size: 16px;
 	overflow-x: hidden;
+	height: 100vh;
 }
 
 h1,
