Update about section, componentize

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,18 +13,31 @@
 	--primary: "Inter";
 	--secondary: "Woodland";
 
+	/* animation */
+	--smooth: cubic-bezier(0.075, 0.8, 0.17, 1);
+
 	/* colors */
 	--gradient1: hsl(39, 100%, 85%);
 	--gradient2: hsl(305, 100%, 72%);
 	--gradient3: hsl(192, 100%, 82%);
+	--gradient4: hsl(330, 100%, 63%);
+	--gradient5: hsl(288, 100%, 71%);
+	--gradient6: hsl(36, 100%, 64%);
 	--border: hsl(208, 8%, 30%);
-	--fifty-grey: hsl(0, 0%, 65%);
+	--grey: hsl(0, 0%, 65%);
 	--icon-default: hsl(0, 0%, 63%);
-	--bg-darkmode: hsl(0, 0%, 4%);
-	--bg-lightmode: rgba(250, 250, 250, 100%);
-	--cursor-bg: rgba(250, 250, 250, 0.2);
-	--text-darkmode: hsl(0, 0%, 96%);
-	--text-lightmode: hsl(0, 0%, 9%);
+	--bg-dark: hsl(0, 0%, 4%);
+	--text-offwhite: hsl(0, 0%, 96%);
+	--cursor-color: hsl(0, 0%, 100%);
+	--cursor-hover: rgba(250, 250, 250, 0.2);
+	--linkHover: hsl(44, 100%, 50%);
+	--divider: rgba(105, 105, 105, 0.3);
+
+	/* sizes */
+	--sidePadding: 15%;
+	--paragraph-length: 52ch;
+	--logoSize: 20px;
+	--cardSize: 30%;
 
 	/* scrollbar for Firefox */
 	scrollbar-color: rgb(34, 34, 34) var(--background);
